<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".About.AboutAppActivity">

        <include
            android:id="@+id/about_page_toolbar"
            layout="@layout/all_app_bar_layout"
             />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_page_toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:text="@string/about_text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/project_git_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0sp"
            android:text="@string/project_git_link"
            android:textAlignment="center"
            android:autoLink="web"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal" />

        <!-- Instructor part -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/sir_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/project_git_link"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:civ_border_color="@color/black"
            android:src="@drawable/omor_faruk_sir"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/instructed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sir_image"
            android:layout_centerHorizontal="true"
            android:text="instructed by-"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/sir_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/instructed_by"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/instructor_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/about_sir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sir_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="Lecturer, Bangladesh University"
            android:textStyle="normal" />



        <!-- Developer part-->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dev_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/about_sir"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:civ_border_color="@color/black"
            android:src="@drawable/hasnat"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/developed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dev_photo"
            android:layout_centerHorizontal="true"
            android:text="developed by-"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/dev_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/developed_by"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/student_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/about_dev1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dev_name"
            android:layout_centerHorizontal="true"
            android:text="Student, Bangladesh University"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/student_id_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dev1"
            android:layout_centerHorizontal="true"
            android:text="@string/student_id_details"
            android:textAlignment="center"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/student_id_details"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:id="@+id/linLayout1">

            <Button
                android:id="@+id/git_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="7dp"
                android:background="@drawable/ic_github"
                />

            <Button
                android:id="@+id/insta_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="7dp"
                android:background="@drawable/ic_instagram" />

            <Button
                android:id="@+id/lin_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="7dp"
                android:background="@drawable/ic_linkedin" />

            <Button
                android:id="@+id/tw_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="7dp"
                android:background="@drawable/ic_twitter" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@TheHasnatBD"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:id="@+id/username_txt"
            android:layout_below="@id/linLayout1"
            android:layout_marginBottom="30dp"
            />



    </RelativeLayout>

</ScrollView>